--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/public/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Dashboard" />
+    <meta name="description" content="Fouad" />
+    <link rel="icon" href="/public/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;800;900;1000&family=Lato:wght@300;400;700;900&family=Lobster&family=Open+Sans:wght@400;700&family=Work+Sans:wght@200;600&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-    <title>Dashboard</title>
+    <title>Fouad</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
